Fixed mobile header with spacing and aligning

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -93,6 +93,14 @@ body{
     content: var(--theme_toggle_icon);
 }
 
+.compass{
+    content: var(--compass);
+}
+
+.map_search{
+    content: var(--map-search);
+}
+
 .paginator-arrow-left{ content: var(--paginator-arrow-left); }
 .paginator-arrow-right{ content: var(--paginator-arrow-right); }
 .paginator-arrow-double-left{ content: var(--paginator-arrow-double-left); }
